# messaging-queues

./: README.md  pyproject.toml
amazon-sqs/: basics.py  consumer.py  producer.py
gcloud-pubsub/: pub.py  sub.py
rabbit_mq/: docker-compose.yml
rabbit_mq/basic_send_receive/: receive.py  send.py
rabbit_mq/publish_subscribe/: emit_log.py  receive_log.py
rabbit_mq/routing/: emit_log_direct.py  receive_logs_direct.py
rabbit_mq/task_queues/: receive_task.py  send_task.py
