[tool.poetry]
name = "messaging-queues"
version = "0.1.0"
description = ""
authors = ["code-arpit <code.arpitjain@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
black = "^25.1.0"
ruff = "^0.9.4"
boto3 = "^1.36.10"
pika = "^1.3.2"
google-cloud-pubsub = "^2.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
